--- a/Utility.xaml
+++ b/Utility.xaml
@@ -1,24 +1,22 @@
-Utilities
-<window x:Class="Agente"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:local="clr-namespace:Utility.xaml"
-	mc:Ignorable="d"
-	title="Agente Utilitario TatoCofee" Height="533" Width="786">
-
-<viewbox>
-	<Grid Background="#777777" ShowGridLines="False" Name="MainGrid">
-		<Grid.ColumnDefinition>
-			<ColumnDefinition Width="3"/>
-			<ColumnDefinition Width="7"/>
-        </Grid.ColumnDefinition>
-        <StackPanel Background="#777777" SnapsToDevicesPixels="True" Grid.Column="0">
-        	<Image Height="200" Width="200" Name="Icon" SnapsToDevicesPixels="True"
-        	Source="https://integriaims.com/wp-content/uploads/2018/06/qu%C3%A9-es-el-helpdesk-featured.png" Margin="0,10,0,10"/>
-        	<Button Content="Instaladores" VerticalAlignment="Top" Height="40" Background="#222222" BorderThickness="0,0,0,0" FontWeight="Blod" Foreground="#ffffff" Name="Tab1BT"/>
-        	<Button Content="Tweaks" VerticalAlignment="Top" Height="40" Background="#333333" BorderThickness="0,0,0,0" FontWeight="Bold" Foreground="#ffffff" Name="Tab2BT"/>
+<Window x:Class="WinUtility.MainWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:WinUtility"
+        mc:Ignorable="d"
+        Background="#777777"
+        Title="Chris Titus Tech's Windows Utility" Height="533" Width="786">
+	<Viewbox>
+		<Grid Background="#777777" ShowGridLines="False" Name="MainGrid">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="3*"/>
+				<ColumnDefinition Width="7*"/>
+			</Grid.ColumnDefinitions>
+			<StackPanel Background="#777777" SnapsToDevicePixels="True" Grid.Column="0">
+				<Image Height="200" Width="200" Name="Icon" SnapsToDevicePixels="True" Source="https://christitus.com/images/logo-full.png" Margin="0,10,0,10"/>
+				<Button Content="Install" VerticalAlignment="Top" Height="40" Background="#222222" BorderThickness="0,0,0,0" FontWeight="Bold" Foreground="#ffffff" Name="Tab1BT"/>
+				<Button Content="Tweaks" VerticalAlignment="Top" Height="40" Background="#333333" BorderThickness="0,0,0,0" FontWeight="Bold" Foreground="#ffffff" Name="Tab2BT"/>
 				<Button Content="Config" VerticalAlignment="Top" Height="40" Background="#444444" BorderThickness="0,0,0,0" FontWeight="Bold" Foreground="#ffffff" Name="Tab3BT"/>
 				<Button Content="Updates" VerticalAlignment="Top" Height="40" Background="#555555" BorderThickness="0,0,0,0" FontWeight="Bold" Foreground="#ffffff" Name="Tab4BT"/>
 			</StackPanel>
