--- a/Utility.xaml
+++ b/Utility.xaml
@@ -73,6 +73,7 @@
 							<CheckBox Name="Installnotepadplus" Content="Notepad++" Margin="5,0"/>
 							<CheckBox Name="Installobsidian" Content="Obsidian" Margin="5,0"/>
 							<CheckBox Name="Installsumatra" Content="Sumatra PDF" Margin="5,0"/>
+							<CheckBox Name="Installopenoffice" Content="OpenOffice" Margin="5,0"/>
 
 							<Label Content="Juegos" FontSize="16" Margin="5,0"/>
 							<CheckBox Name="Installepicgames" Content="Epic Games Launcher" Margin="5,0"/>
