--- a/Utility.xaml
+++ b/Utility.xaml
@@ -13,7 +13,7 @@
 				<ColumnDefinition Width="3*"/>
 				<ColumnDefinition Width="7*"/>
 			</Grid.ColumnDefinitions>
-			<StackPanel Background="#777777" SnapsToDevicePixels="True" Grid.Column="0">
+			<StackPanel Background="#6600FF" SnapsToDevicePixels="True" Grid.Column="0">
 				<Image Height="200" Width="200" Name="Icon" SnapsToDevicePixels="True" Source="https://blog.endeos.com/wp-content/uploads/2021/02/helpdesk-vs-servicedesk.jpg" Margin="0,10,0,10"/>
 				<Button Content="Instalar" VerticalAlignment="Top" Height="40" Background="#222222" BorderThickness="0,0,0,0" FontWeight="Bold" Foreground="#ffffff" Name="Tab1BT"/>
 				<Button Content="Retoques" VerticalAlignment="Top" Height="40" Background="#333333" BorderThickness="0,0,0,0" FontWeight="Bold" Foreground="#ffffff" Name="Tab2BT"/>
