--- a/Utility.xaml
+++ b/Utility.xaml
@@ -221,16 +221,16 @@
 						</Grid.RowDefinitions>
 						<StackPanel Background="#777777" SnapsToDevicePixels="True" Grid.Row="0" Margin="10,5">
 
-							<TextBlock Text="This is the default settings that come with Windows. No modifications are made and will remove any custom windows update settings." Margin="20,0,20,0" Padding="10" TextWrapping="WrapWithOverflow" MaxWidth="300"/>
-							<Button Name="Updatesdefault" FontSize="16" Background="AliceBlue" Content="Default (Out of Box) Settings" Margin="20,0,20,10" Padding="10"/>
+							<TextBlock Text="Esta es la configuración predeterminada que viene con Windows. No se realizan modificaciones y eliminará cualquier configuración personalizada de actualización de Windows." Margin="20,0,20,0" Padding="10" TextWrapping="WrapWithOverflow" MaxWidth="300"/>
+							<Button Name="Updatesdefault" FontSize="16" Background="AliceBlue" Content="Configuración predeterminada (fuera de la caja)" Margin="20,0,20,10" Padding="10"/>
 						</StackPanel>
 						<StackPanel Background="#777777" SnapsToDevicePixels="True" Grid.Row="1" Margin="10,5">
-							<TextBlock Text="This is my recommended setting I use on all computers. It will delay feature updates by 2 years and will install security updates 4 days after release. These are the settings I use in business environments." Margin="20,0,20,0" Padding="10" TextWrapping="WrapWithOverflow" MaxWidth="300"/>
-							<Button Name="Updatessecurity" FontSize="16" Background="AliceBlue" Content="Security (Recommended) Settings" Margin="20,0,20,10" Padding="10"/>
+							<TextBlock Text="Esta es mi configuración recomendada que uso en todas las computadoras. Retrasará las actualizaciones de funciones por 2 años e instalará actualizaciones de seguridad 4 días después del lanzamiento. Estos son los ajustes que utilizo en entornos empresariales." Margin="20,0,20,0" Padding="10" TextWrapping="WrapWithOverflow" MaxWidth="300"/>
+							<Button Name="Updatessecurity" FontSize="16" Background="AliceBlue" Content="Configuración de seguridad (recomendada)" Margin="20,0,20,10" Padding="10"/>
 						</StackPanel>
 						<StackPanel Background="#777777" SnapsToDevicePixels="True" Grid.Row="2" Margin="10,5">
-							<TextBlock Text="This completely disables ALL Windows Updates and is NOT RECOMMENDED. You system will be easier to hack and infect without security updates. However, it can be suitable if you use your system for a select purpose and do not actively browse the internet." Margin="20,0,20,0" Padding="10" TextWrapping="WrapWithOverflow" MaxWidth="300"/>
-							<Button Name="Updatesdisable" FontSize="16" Background="AliceBlue" Content="Disable ALL Updates (NOT RECOMMENDED!)" Margin="20,0,20,10" Padding="10"/>
+							<TextBlock Text="Esto deshabilita completamente TODAS las actualizaciones de Windows y NO SE RECOMIENDA. Su sistema será más fácil de piratear e infectar sin actualizaciones de seguridad. Sin embargo, puede ser adecuado si usa su sistema para un propósito específico y no navega activamente por Internet." Margin="20,0,20,0" Padding="10" TextWrapping="WrapWithOverflow" MaxWidth="300"/>
+							<Button Name="Updatesdisable" FontSize="16" Background="AliceBlue" Content="Deshabilite TODAS las actualizaciones (¡NO SE RECOMIENDA!)" Margin="20,0,20,10" Padding="10"/>
 						</StackPanel>
 
 					</Grid>
