--- a/Utility.xaml
+++ b/Utility.xaml
@@ -129,8 +129,8 @@
 							<CheckBox Name="Installtreesize" Content="TreeSize Free" Margin="5,0"/>
 							<CheckBox Name="Installwindirstat" Content="WinDirStat" Margin="5,0"/>
 							<CheckBox Name="Installterminal" Content="Windows Terminal" Margin="5,0"/>
-							<Button Name="install" Background="AliceBlue" Content="Start Install" Margin="20,5,20,5" ToolTip="Install all checked programs"/>
-							<Button Name="InstallUpgrade" Background="AliceBlue" Content="Upgrade Installs" Margin="20,5,20,5" ToolTip="Upgrade All Existing Programs on System"/>
+							<Button Name="install" Background="AliceBlue" Content="Correr Instlacion" Margin="20,5,20,5" ToolTip="Install all checked programs"/>
+							<Button Name="InstallUpgrade" Background="AliceBlue" Content="Actualizar Instalaciones" Margin="20,5,20,5" ToolTip="Upgrade All Existing Programs on System"/>
 
 						</StackPanel>
 					</Grid>
