--- a/Utility.xaml
+++ b/Utility.xaml
@@ -28,7 +28,7 @@
 							<ColumnDefinition Width="1*"/>
 							<ColumnDefinition Width="1*"/>
 						</Grid.ColumnDefinitions>
-						<StackPanel Background="#777777" SnapsToDevicePixels="True" Grid.Column="0" Margin="10">
+						<StackPanel Background="#FF0000" SnapsToDevicePixels="True" Grid.Column="0" Margin="10">
 							<Label Content="Navegadores" FontSize="16" Margin="5,0"/>
 							<CheckBox Name="Installbrave" Content="Brave" Margin="5,0"/>
 							<CheckBox Name="Installchrome" Content="Google Chrome" Margin="5,0"/>
@@ -65,7 +65,7 @@
 
 							
 						</StackPanel>
-						<StackPanel Background="#777777" SnapsToDevicePixels="True" Grid.Column="1" Margin="10">
+						<StackPanel Background="#FF0000" SnapsToDevicePixels="True" Grid.Column="1" Margin="10">
 
 							<Label Content="SDocumentos" FontSize="16" Margin="5,0"/>
 							<CheckBox Name="Installadobe" Content="Adobe Reader DC" Margin="5,0"/>
@@ -107,7 +107,7 @@
 							<CheckBox Name="Installvoicemeeter" Content="Voicemeeter (Audio)" Margin="5,0"/>
 
 						</StackPanel>
-						<StackPanel Background="#777777" SnapsToDevicePixels="True" Grid.Column="2" Margin="10">
+						<StackPanel Background="#FF0000" SnapsToDevicePixels="True" Grid.Column="2" Margin="10">
 							<Label Content="Utilidades" FontSize="16" Margin="5,0"/>
 							<CheckBox Name="Installsevenzip" Content="7-Zip" Margin="5,0"/>
 							<CheckBox Name="Installanydesk" Content="AnyDesk" Margin="5,0"/>
