--- a/Utility.xaml
+++ b/Utility.xaml
@@ -9,12 +9,12 @@
         Title="TatoCoffee(JP) Windows Utility" Height="533" Width="786">
 	
 	<Viewbox>
-		<Grid Background="#6600FF" ShowGridLines="False" Name="MainGrid">
+		<Grid Background="#777777" ShowGridLines="False" Name="MainGrid">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="3*"/>
 				<ColumnDefinition Width="7*"/>
 			</Grid.ColumnDefinitions>
-			<StackPanel Background="#000000" SnapsToDevicePixels="True" Grid.Column="0">
+			<StackPanel Background="#777777" SnapsToDevicePixels="True" Grid.Column="0">
 				<Image Height="200" Width="200" Name="Icon" SnapsToDevicePixels="True" Source="https://blog.endeos.com/wp-content/uploads/2021/02/helpdesk-vs-servicedesk.jpg" Margin="0,10,0,10"/>
 				<Button Content="Instalar" VerticalAlignment="Top" Height="40" Background="#767676" BorderThickness="0,0,0,0" FontWeight="Bold" Foreground="#ffffff" Name="Tab1BT"/>
 				<Button Content="Retoques" VerticalAlignment="Top" Height="40" Background="#767676" BorderThickness="0,0,0,0" FontWeight="Bold" Foreground="#ffffff" Name="Tab2BT"/>
@@ -23,13 +23,13 @@
 			</StackPanel>
 			<TabControl Grid.Column="1" Padding="-1" Name="TabNav" SelectedIndex="0">
 				<TabItem Header="Install" Visibility="Collapsed" Name="Tab1">
-					<Grid Background="#222222">
+					<Grid Background="#777777">
 						<Grid.ColumnDefinitions>
 							<ColumnDefinition Width="1*"/>
 							<ColumnDefinition Width="1*"/>
 							<ColumnDefinition Width="1*"/>
 						</Grid.ColumnDefinitions>
-						<StackPanel Background="#068500" SnapsToDevicePixels="True" Grid.Column="0" Margin="10">
+						<StackPanel Background="#777777" SnapsToDevicePixels="True" Grid.Column="0" Margin="10">
 							<Label Content="Navegadores" FontSize="16" Margin="5,0"/>
 							<CheckBox Name="Installbrave" Content="Brave" Margin="5,0"/>
 							<CheckBox Name="Installchrome" Content="Google Chrome" Margin="5,0"/>
@@ -66,7 +66,7 @@
 
 							
 						</StackPanel>
-						<StackPanel Background="#1E5D00" SnapsToDevicePixels="True" Grid.Column="1" Margin="10">
+						<StackPanel Background="#777777" SnapsToDevicePixels="True" Grid.Column="1" Margin="10">
 
 							<Label Content="SDocumentos" FontSize="16" Margin="5,0"/>
 							<CheckBox Name="Installadobe" Content="Adobe Reader DC" Margin="5,0"/>
@@ -108,7 +108,7 @@
 							<CheckBox Name="Installvoicemeeter" Content="Voicemeeter (Audio)" Margin="5,0"/>
 
 						</StackPanel>
-						<StackPanel Background="#022A00" SnapsToDevicePixels="True" Grid.Column="2" Margin="10">
+						<StackPanel Background="#777777" SnapsToDevicePixels="True" Grid.Column="2" Margin="10">
 							<Label Content="Utilidades" FontSize="16" Margin="5,0"/>
 							<CheckBox Name="Installsevenzip" Content="7-Zip" Margin="5,0"/>
 							<CheckBox Name="Installanydesk" Content="AnyDesk" Margin="5,0"/>
